--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -62,11 +62,11 @@ layout: default
   </header>
 
   <article class="post-content">
-    <!-- {% if page.toc and page.toc.beginning %}
+    {% if page.toc and page.toc.beginning %}
       <div id="table-of-contents">
-        {% toc %}
+        {% page.toc %}
       </div>
-      <hr> -->
+      <hr>
     {% endif %}
     <div id="markdown-content">
       {{ content }}
