--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -8,6 +8,8 @@ layout: default
   </header>
 
   <article>
-    {{ content }}
+    <div id="markdown-content">
+      {{ content }}
+    </div>
   </article>
 </div>
