al-folio upgrade fix

--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -8,8 +8,17 @@ layout: default
   </header>
 
   <article>
-    <div id="markdown-content">
-      {{ content }}
-    </div>
+    {{ content }}
   </article>
+
+  {% if page.related_publications %}
+    <h2>References</h2>
+    <div class="publications">
+      {% bibliography --cited_in_order %}
+    </div>
+  {% endif %}
+
+  {% if site.giscus and page.giscus_comments %}
+    {% include giscus.liquid %}
+  {% endif %}
 </div>
